2013-04-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ahci.c (grub_ahci_pciinit): Fix handling of empty
	ports.

2013-04-27  Leon Drugi <eyak>

	* grub-core/loader/multiboot_mbi2.c (grub_multiboot_load): Fix cast in
	BSS clearing.

2013-04-27  Vladimir Serbinenko  <phcoder@gmail.com>

	Core compression test.

2013-04-27  Vladimir Serbinenko  <phcoder@gmail.com>

	Implement grub_machine_get_bootlocation for ARC.

2013-04-27  Vladimir Serbinenko  <phcoder@gmail.com>

	Improve AHCI detection and command issuing.

2013-04-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix pseries test.

2013-04-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Make 'make check' work on emu.

2013-04-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Replace libcurses with our own vt100 handling for the ease of testing
	and decreasing prerequisites.

2013-04-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/Makefile.core.def: Fix grub-emu and grub-emu-lite sources.

2013-04-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c (exec_pipe): Put proper #if's so that its users don't
	compile when not needed.

2013-04-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/pseries_test.in: New test.

2013-04-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Add test to check that different boot mediums work.

2013-04-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Rename i386-ieee1275 core image due to
	ofw limited ISO support.

2013-04-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Fix loongson conditional.

2013-04-25  Vladimir Serbinenko  <phcoder@gmail.com>

	Enable mipsel-arc.

2013-04-25  Vladimir Serbinenko  <phcoder@gmail.com>

	Add serial on ARC platform.

2013-04-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/boot/powerpc/bootinfo.txt.in: Missing update from previous
	commit.

2013-04-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/partmap_test.in: Add missing double semicolon.
